@@ -44,6 +44,7 @@ Ming-Hsien Tsai
 Nikos Gorogiannis
 Ondřej Lengál
 Paul Guénézan
+Pierre Ganty
 Reuben Rowe
 Roei Nahum
 Rüdiger Ehlers
